--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -4,6 +4,7 @@
 @import './basic/layout.less';
 @import './basic/shadow.less';
 @import './basic/anim.less';
+@import './basic/mixin.less';
 
 /* Common components */
 @import './common/imagecard.less';
@@ -21,4 +22,5 @@
 @import './pic/pic.less';
 @import './search/search.less';
 @import './artist/artist.less';
+@import './history/history.less';
 @import './404/404.less';
