--- a/src/styles/rank/rank.less
+++ b/src/styles/rank/rank.less
@@ -15,8 +15,8 @@
 .rank-header {
   padding: 32px 0 24px 0;
   margin: 0 auto;
-  .rank-component-width-mixin(6);
-  .rank-component-width-responsive-mixin(5, 2, 72px);
+  .image-page-width-mixin(6);
+  .image-page-width-responsive-mixin(5, 2, 72px);
   span,
   i {
     .no-select();
@@ -55,8 +55,8 @@
 .rank-body {
   &-date {
     margin: 0 auto;
-    .rank-component-width-mixin(6);
-    .rank-component-width-responsive-mixin(5, 2, 72px);
+    .image-page-width-mixin(6);
+    .image-page-width-responsive-mixin(5, 2, 72px);
     position: relative;
     span,
     i {
@@ -302,21 +302,4 @@
       margin-left: 4px;
     }
   }
-}
-
-/* Mixin */
-
-.rank-component-width-mixin(@col) {
-  @container-width: @col * @image-card-width + @image-card-margin * 2 * @col;
-  width: @container-width - 8px;
-}
-
-.rank-component-width-responsive-mixin(@col, @min-col, @margin) when (@col >= @min-col) {
-  @trigger-width: (@col + 1) * @image-card-width + @image-card-margin * 2 * (@col + 1) + 2 * @margin -
-    1px;
-  @container-width: @col * @image-card-width + @image-card-margin * 2 * @col;
-  @media (max-width: @trigger-width) {
-    width: @container-width - 8px !important;
-  }
-  .rank-component-width-responsive-mixin(@col - 1, @min-col, @margin);
 }
