--- a/src/styles/history/history.less
+++ b/src/styles/history/history.less
@@ -22,13 +22,20 @@
       float: right;
       transition: 200ms ease-in-out;
       transform: translateX(6px);
-    }
-    &-close:hover {
-      color: lighten(@color-text-primary, 10%);
-      cursor: pointer;
+      .el-icon-delete {
+        margin-right: 16px;
+      }
+      i:hover {
+        color: lighten(@color-text-primary, 10%);
+        cursor: pointer;
+      }
     }
   }
   &-body {
+    position: relative;
+    padding-bottom: 24px;
+    box-sizing: border-box;
+    overflow: hidden;
     &-empty {
       width: 100%;
       text-align: center;
@@ -42,6 +49,83 @@
       .waterfall-responsive-mixin(5, 2, 72px);
       .waterfall {
         overflow: hidden;
+      }
+    }
+    .waterfall-end {
+      font-size: 14px;
+      color: @color-text-primary;
+      width: 100%;
+      text-align: center;
+    }
+  }
+}
+
+// dark mode
+
+.dark {
+  .history {
+    &-header {
+      &-title {
+        color: darken(@color-text-primary, 2.5%);
+        &--small {
+          color: darken(@color-text-primary, 2.5%);
+        }
+      }
+      &-close {
+        color: darken(@color-text-primary, 2.5%);
+      }
+      &-close {
+        i:hover {
+          color: lighten(@color-text-primary, 2.5%);
+        }
+      }
+    }
+    &-body {
+      &-empty {
+        color: darken(@color-text-primary, 2.5%);
+      }
+      .waterfall-end {
+        color: darken(@color-text-primary, 2.5%);
+      }
+    }
+  }
+}
+
+// mobile
+
+@media (max-width: 1280px) {
+  .history {
+    &-header {
+      &-title {
+        font-size: 28px;
+        &--small {
+          font-size: 20px;
+        }
+      }
+    }
+  }
+}
+
+@media (max-width: 767px) {
+  .history {
+    &-header {
+      width: auto !important;
+      padding: 18px 24px 18px 24px;
+      &-title {
+        font-size: 24px;
+        &--small {
+          display: none;
+        }
+      }
+    }
+    &-body {
+      padding: 0 16px;
+      &-empty {
+        span {
+          display: block;
+          line-height: 42px;
+          font-size: 18px;
+        }
       }
     }
   }
