fix: pic loading spinner styles

--- a/src/styles/pic/pic.less
+++ b/src/styles/pic/pic.less
@@ -5,6 +5,7 @@
   display: flex;
   justify-content: center;
   & > .el-loading-mask {
+    max-height: 100vh;
     background-color: #fff !important;
     .el-loading-spinner {
       transform: translateY(-47.5%);
