fix: landing styles for 150% resize on windows

--- a/src/styles/landing/banner.less
+++ b/src/styles/landing/banner.less
@@ -205,11 +205,18 @@
 
 @media (max-height: 754px) {
   .banner-wrapper {
-    height: 690px;
+    height: 700px;
     max-height: 240px;
+    .banner {
+      .about {
+        &-copyright {
+          margin-top: 80px;
+        }
+      }
+    }
   }
   .banner-expanded {
-    max-height: 690px;
+    max-height: 700px;
   }
   .banner-title {
     font-size: 68px;
