--- a/src/styles/landing/landing.less
+++ b/src/styles/landing/landing.less
@@ -98,6 +98,14 @@
   }
 }
 
+// mobile pc
+
+@media (max-height: 754px) {
+  .landing-container {
+    padding: 1.625rem 3.75rem;
+  }
+}
+
 // tablet
 @media (max-width: 1024px) {
   .landing-announcement {
