--- a/src/styles/landing/rankbox.less
+++ b/src/styles/landing/rankbox.less
@@ -84,7 +84,13 @@
 
 @media (max-height: 754px) {
   .rankbox-wrapper {
-    height: 202px;
+    height: 188px;
+    .rankbox {
+      span,
+      a {
+        font-size: 1.5rem;
+      }
+    }
   }
 }
 
