feat: add active styles

--- a/src/styles/common/back2top.less
+++ b/src/styles/common/back2top.less
@@ -31,7 +31,7 @@
   background: lighten(@color-primary, 10%);
 }
 
-.back2top:focus {
+.back2top:active {
   background: lighten(@color-primary, 5%);
 }
 
@@ -44,7 +44,7 @@
     cursor: pointer;
     background: @color-primary;
   }
-  .back2top:focus {
-    background: darken(@color-primary, 2.5%);
+  .back2top:active {
+    background: darken(@color-primary, 3.75%);
   }
 }
