--- a/src/styles/landing/searchbox.less
+++ b/src/styles/landing/searchbox.less
@@ -12,11 +12,19 @@
   &-title {
     text-align: center;
     padding: 1rem 0 1.25rem 0;
-    font-size: 1.625rem;
-    letter-spacing: 0.1rem;
-    color: @color-text-accent;
+
     text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.25);
     .no-select();
+    .el-dropdown {
+      display: inline;
+      margin-left: 0.075rem;
+      cursor: pointer;
+    }
+    span {
+      font-size: 1.625rem;
+      letter-spacing: 0.1rem;
+      color: @color-text-accent;
+    }
   }
   &-input {
     padding: 0.375rem 2rem 1rem 2rem;
@@ -68,6 +76,13 @@
     button:focus {
       background: rgba(255, 255, 255, 0.15);
     }
+  }
+}
+
+.search-dropdown {
+  .el-dropdown-menu__item {
+    font-size: 15px;
+    letter-spacing: 0.05rem;
   }
 }
 
