fix: dropdown style

--- a/src/styles/basic/dropdown.less
+++ b/src/styles/basic/dropdown.less
@@ -19,6 +19,9 @@
   .el-dropdown-menu {
     background-color: lighten(@color-background-dark, 7.5%);
     border-color: lighten(@color-background-dark, 6.25%);
+    .el-dropdown-menu__item {
+      color: #999;
+    }
     .el-dropdown-menu__item:hover {
       background-color: lighten(@color-background-dark, 8.75%);
       color: darken(@color-text-primary, 2.5%);
