fix: searchbox style

--- a/src/styles/landing/searchbox.less
+++ b/src/styles/landing/searchbox.less
@@ -125,7 +125,7 @@
 
 @media (max-width: 767px) {
   .searchbox {
-    padding: 20px 8px;
+    padding: 16px 8px 20px 8px;
     &-title {
       font-size: 22px;
     }
