feat: add user search page

--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -14,6 +14,7 @@
 @import './common/notice.less';
 @import './common/downloadlist.less';
 @import './common/qrpopup.less';
+@import './common/artistcard.less';
 
 /* Views */
 
@@ -21,6 +22,7 @@
 @import './rank/rank.less';
 @import './pic/pic.less';
 @import './search/search.less';
+@import './usearch/usearch.less';
 @import './artist/artist.less';
 @import './history/history.less';
 @import './404/404.less';
