--- a/src/styles/search/search.less
+++ b/src/styles/search/search.less
@@ -11,11 +11,14 @@
     }
   }
 
+  .search-responsive {
+    .image-page-width-mixin(6);
+    .image-page-width-responsive-mixin(5, 2, 72px);
+  }
+
   .search-header {
     padding: 32px 0 24px 0;
     margin: 0 auto;
-    .image-page-width-mixin(6);
-    .image-page-width-responsive-mixin(5, 2, 72px);
     span,
     i {
       .no-select();
@@ -72,8 +75,6 @@
 
   .search-suggestion {
     margin: 0 auto;
-    .image-page-width-mixin(6);
-    .image-page-width-responsive-mixin(5, 2, 72px);
     white-space: nowrap;
     overflow-x: hidden;
     padding-bottom: 12px;
@@ -181,6 +182,9 @@
         input {
           background: @color-background-dark;
           border: 1px solid darken(@color-text-primary, 2.5%);
+        }
+        input::-webkit-input-placeholder {
+          color: darken(@color-text-primary, 2.5%);
         }
       }
       &-close {
@@ -305,7 +309,7 @@
     .search-header {
       width: auto !important;
       height: 48px;
-      padding: 18px 24px 8px 24px;
+      padding: 12px 24px 8px 24px;
       display: flex;
       align-items: center;
       &-title {
@@ -314,7 +318,7 @@
       &-input {
         width: 52.5vw;
         margin-left: 12px;
-        margin-top: 0;
+        margin-top: 6px;
         transform: translateY(0px);
         input {
           height: 36px !important;
@@ -329,7 +333,7 @@
       &-close {
         position: absolute;
         right: 24px;
-        transform: translate(4px, -6px);
+        transform: translate(4px);
       }
     }
     .search-suggestion {
