feat: user search fit mobile and fix some issues

--- a/src/styles/artist/artist.less
+++ b/src/styles/artist/artist.less
@@ -4,6 +4,9 @@
   min-height: 100vh;
   & > .el-loading-mask {
     background-color: #fff !important;
+    .el-loading-spinner {
+      transform: translateY(-50%);
+    }
   }
   .infinite-loading-container {
     .infinite-status-prompt {
