fix: user search interaction

--- a/src/styles/common/artistcard.less
+++ b/src/styles/common/artistcard.less
@@ -26,6 +26,9 @@
       font-weight: 600;
       letter-spacing: 0.05rem;
       margin-left: 1rem;
+      span {
+        word-break: break-all;
+      }
     }
     &__id {
       font-size: 13px;
