feat: add share popup

--- a/src/styles/pic/presentation.less
+++ b/src/styles/pic/presentation.less
@@ -110,10 +110,24 @@
   .pic-presentation-info {
     margin: 24px 0 32px 0;
     width: 100%;
+    position: relative;
     &-title {
+      width: 100%;
+      display: flex;
+      align-items: center;
       font-size: 26px;
       font-weight: 600;
       color: @color-text-primary;
+      span {
+        flex: 1;
+      }
+      i {
+        justify-self: flex-end;
+        cursor: pointer;
+      }
+      i:hover {
+        color: lighten(@color-text-primary, 5%);
+      }
     }
     &-caption {
       margin-top: 18px;
@@ -209,6 +223,9 @@
     .pic-presentation-info {
       &-title {
         color: darken(@color-text-primary, 2.5%);
+        i:hover {
+          color: lighten(@color-text-primary, 2.5%);
+        }
       }
       &-caption {
         color: darken(@color-text-primary, 2.5%);
@@ -359,5 +376,12 @@
         font-size: 22px;
       }
     }
+  }
+}
+
+// share
+.dark {
+  .vue-share-popup {
+    filter: brightness(0.8);
   }
 }
