feat: add share overlay

--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -15,6 +15,7 @@
 @import './common/downloadlist.less';
 @import './common/qrpopup.less';
 @import './common/artistcard.less';
+@import './common/shareoverlay.less';
 
 /* Views */
 
