fix: style issues

--- a/src/styles/pic/author.less
+++ b/src/styles/pic/author.less
@@ -77,5 +77,15 @@
     &-title {
       font-size: 22px;
     }
+    &-info {
+      font-size: 20px;
+      a {
+        margin-left: 12px;
+      }
+      .pic-author-name--long {
+        font-size: 18.5px;
+        letter-spacing: 0.075rem;
+      }
+    }
   }
 }
