--- a/src/styles/pic/pic.less
+++ b/src/styles/pic/pic.less
@@ -1,9 +1,10 @@
 .pic-container {
-  width: calc(100% - 128px);
+  width: 100%;
   padding: 0 64px 0 64px;
   min-height: 100vh;
   display: flex;
   justify-content: center;
+  box-sizing: border-box;
   & > .el-loading-mask {
     max-height: 100vh;
     background-color: #fff !important;
