--- a/src/styles/pic/presentation.less
+++ b/src/styles/pic/presentation.less
@@ -60,7 +60,7 @@
     }
   }
   .pic-presentation-page {
-    margin: 24px 0 32px 0;
+    margin: 24px 0 16px 0;
     height: 20px;
     width: 100%;
     display: flex;
@@ -91,7 +91,7 @@
       justify-self: center;
     }
     &-next {
-      width: 120px;
+      width: 96px;
       text-align: right;
       justify-self: flex-end;
       i {
@@ -384,9 +384,12 @@
     .pic-presentation-page {
       margin-top: 18px;
       margin-bottom: 4px;
+      span {
+        font-size: 15px !important;
+      }
     }
     .pic-presentation-info {
-      margin: 24px 0;
+      margin: 16px 0 24px 0;
       float: left;
       &-title {
         font-size: 22px;
