--- a/src/styles/landing/landing.less
+++ b/src/styles/landing/landing.less
@@ -8,7 +8,7 @@
     position: relative;
     display: block;
     border-radius: 24px;
-    background-color: lighten(@color-primary, 5%);
+    background-color: darken(@color-background-primary, 12.5%);
     background-position: top center;
     background-repeat: no-repeat;
     background-size: 87.5rem auto;
@@ -73,7 +73,7 @@
 .dark {
   .landing-container {
     .landing {
-      background-color: darken(@color-primary, 3.75%);
+      background-color: lighten(@color-background-dark, 12.5%);
       filter: brightness(0.875);
       &-content {
         background: lighten(@color-background-dark, 0.75%);
