--- a/src/styles/common/infinite.less
+++ b/src/styles/common/infinite.less
@@ -5,9 +5,45 @@
   border-right: transparent !important;
 }
 
+.infinite-failed {
+  width: 100%;
+  text-align: center;
+  margin-top: 1.5rem;
+  color: @color-text-primary;
+  font-weight: 600;
+  user-select: none;
+  letter-spacing: 0.05rem;
+  .no-select();
+  .el-button {
+    font-weight: 600;
+    font-size: 0.875rem;
+    letter-spacing: 0.05rem;
+    border: none;
+  }
+  .el-button:hover {
+    background-color: lighten(@color-primary, 7.5%);
+  }
+  .el-button:active {
+    background-color: lighten(@color-primary, 2.5%);
+  }
+}
+
 .dark {
   .loading-spiral {
     border: 2px solid darken(@color-text-primary, 2.5%) !important;
     border-right: transparent !important;
+  }
+  .infinite-failed {
+    color: darken(@color-text-primary, 2.5%);
+    .el-button {
+      filter: brightness(0.8);
+      background-color: darken(@color-text-primary, 2.5%);
+    }
+    .el-button:hover {
+      background-color: lighten(@color-text-primary, 2.5%);
+    }
+    .el-button:active {
+      background-color: @color-text-primary;
+    }
   }
 }
