--- a/src/styles/pic/presentation.less
+++ b/src/styles/pic/presentation.less
@@ -123,6 +123,12 @@
       i {
         justify-self: flex-end;
         cursor: pointer;
+        width: 32px;
+        height: 32px;
+        svg {
+          width: 32px;
+          height: 32px;
+        }
       }
       i:hover {
         color: lighten(@color-text-primary, 5%);
