--- a/src/styles/artist/detail.less
+++ b/src/styles/artist/detail.less
@@ -1,5 +1,6 @@
 .artist-detail {
   width: 100%;
+  z-index: 10;
   .artist-overview {
     width: 100%;
     display: flex;
@@ -22,7 +23,7 @@
         text-align: center;
         color: @color-text-primary;
         font-weight: 600;
-        margin: 24px 0;
+        margin-top: 24px;
       }
       &-data {
         display: flex;
@@ -52,6 +53,47 @@
           margin-right: 0;
         }
       }
+      &-other {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        margin: 18px 0 24px 0;
+        > * {
+          margin-right: 6px;
+          box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.025);
+        }
+        > *:last-child {
+          margin-right: 0;
+        }
+        .artist-info-tag {
+          font-size: 12px;
+          color: @color-text-primary;
+          border-radius: 4px;
+          border: 1px solid @color-text-primary;
+          padding: 2px 4px 3px 4px;
+          user-select: none;
+        }
+        svg {
+          width: 14px;
+          height: 14px;
+          border-radius: 4px;
+          border: 1px solid @color-text-primary;
+          padding: 3px;
+          path {
+            fill: @color-text-primary;
+          }
+        }
+        .artist-other-clickable {
+          transition: background-color 100ms ease;
+          cursor: pointer;
+        }
+        .artist-other-clickable:hover {
+          background: lighten(@color-text-primary, 27.5%);
+        }
+        .artist-other-clickable:active {
+          background: lighten(@color-text-primary, 25%);
+        }
+      }
     }
   }
   .artist-comment {
@@ -65,7 +107,7 @@
     max-width: 888px;
     margin: 32px auto;
     pre {
-      max-height: 180px;
+      max-height: 196px;
       overflow-x: hidden;
       overflow-y: scroll;
       margin: 16px 0;
@@ -96,7 +138,7 @@
 // dark mode
 .dark {
   .artist-overview {
-    .avatar {
+    &-avatar {
       filter: brightness(0.875);
     }
     &-content {
@@ -111,6 +153,24 @@
           &-number {
             color: darken(@color-text-primary, 2.5%);
           }
+        }
+      }
+      &-other {
+        svg {
+          border-color: darken(@color-text-primary, 2.5);
+          path {
+            fill: darken(@color-text-primary, 2.5);
+          }
+        }
+        .artist-info-tag {
+          color: darken(@color-text-primary, 2.5);
+          border-color: darken(@color-text-primary, 2.5);
+        }
+        .artist-other-clickable:hover {
+          background: lighten(@color-background-dark, 6.25%);
+        }
+        .artist-other-clickable:active {
+          background: lighten(@color-background-dark, 2.5%);
         }
       }
     }
@@ -129,9 +189,21 @@
 
 @media (max-width: 767px) {
   .artist-detail {
-    &-content {
-      &-name {
-        font-size: 24px;
+    .artist-overview {
+      &-avatar {
+        #avatar {
+          width: 72px;
+          height: 72px;
+        }
+      }
+      &-content {
+        &-name {
+          font-size: 24px;
+          margin-top: 18px;
+        }
+        &-other {
+          margin: 16px 0 20px 0;
+        }
       }
     }
   }
