--- a/src/styles/basic/anim.less
+++ b/src/styles/basic/anim.less
@@ -26,3 +26,39 @@
     transform: translateX(100%);
   }
 }
+
+@keyframes fadeInUp {
+  from {
+    opacity: 0;
+    transform: translate3d(0, 100%, 0);
+  }
+
+  to {
+    opacity: 1;
+    transform: translate3d(0, 0, 0);
+  }
+}
+
+.fadeInUp {
+  animation-name: fadeInUp;
+  animation-duration: 300ms;
+  animation-timing-function: ease;
+}
+
+@keyframes fadeOutDown {
+  from {
+    opacity: 1;
+  }
+
+  to {
+    opacity: 0;
+    transform: translate3d(0, 100%, 0);
+  }
+}
+
+.fadeOutDown {
+  animation-name: fadeOutDown;
+  animation-duration: 300ms;
+  animation-fill-mode: forwards;
+  animation-timing-function: ease;
+}
