--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -16,6 +16,7 @@
 @import './common/qrpopup.less';
 @import './common/artistcard.less';
 @import './common/shareoverlay.less';
+@import './common/bottomnotify.less';
 
 /* Views */
 
