fix: landing style on iPhone SE

--- a/src/styles/landing/banner.less
+++ b/src/styles/landing/banner.less
@@ -314,7 +314,7 @@
         }
       }
       &-copyright {
-        margin-top: 42px;
+        margin-top: 42px !important;
         &-item {
           font-size: 14px;
         }
