--- a/src/styles/basic/layout.less
+++ b/src/styles/basic/layout.less
@@ -10,7 +10,7 @@ body {
   scroll-behavior: smooth;
   background: @color-background-primary;
   transition: background-color 200ms ease-in-out;
-  font-family: MicroSoft Yahei UI, Heiti SC, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
+  font-family: -apple-system-font, PingFang SC, MicroSoft Yahei UI, Heiti SC, 'Segoe UI', Roboto,
     Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
