feat: finish maintain overlay

--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -17,6 +17,7 @@
 @import './common/artistcard.less';
 @import './common/shareoverlay.less';
 @import './common/bottomnotify.less';
+@import './common/maintain.less';
 
 /* Views */
 
