--- a/src/styles/search/search.less
+++ b/src/styles/search/search.less
@@ -64,7 +64,7 @@
       transition: 200ms ease-in-out;
       color: @color-text-primary;
       font-size: 36px;
-      transform: translateX(8px); // 对齐下方内容
+      transform: translateY(2px); // 对齐下方内容
     }
     &-close:hover {
       color: lighten(@color-text-primary, 10%);
@@ -271,7 +271,7 @@
     .search-header {
       width: auto !important;
       height: 48px;
-      padding: 12px 24px 8px 24px;
+      padding: 12px 24px 16px 24px;
       display: flex;
       align-items: center;
       &-title {
@@ -295,7 +295,7 @@
       &-close {
         position: absolute;
         right: 24px;
-        transform: translate(4px);
+        transform: translate(8px, 2px);
       }
     }
     .search-suggestion {
