--- a/src/styles/artist/artist.less
+++ b/src/styles/artist/artist.less
@@ -1,5 +1,3 @@
-@header-padding-top: 40px;
-
 .artist-container {
   min-height: 100vh;
   & > .el-loading-mask {
@@ -22,19 +20,18 @@
     width: 100%;
     position: relative;
     .artist-header {
-      padding: @header-padding-top 0 18px 0;
+      padding-bottom: 16px;
       margin: 0 auto;
       .image-page-width-mixin(3);
       .image-page-width-responsive-mixin(2, 2, 72px);
-      position: relative;
       span,
       i {
         .no-select();
       }
       &-close {
         position: absolute;
-        right: 0;
-        top: @header-padding-top;
+        right: 42px;
+        top: 20px;
         transition: 200ms ease-in-out;
         color: @color-text-primary;
         font-size: 32px;
@@ -46,20 +43,6 @@
         color: lighten(@color-text-primary, 10%);
         cursor: pointer;
       }
-    }
-    .artist-profile-bg {
-      width: 100%;
-      height: 100%;
-      position: absolute;
-      top: 0;
-      left: 0;
-      background-size: cover;
-      background-position: center;
-      background-repeat: no-repeat;
-      z-index: 1;
-      opacity: 0.25;
-      filter: blur(3.75px);
-      pointer-events: none;
     }
   }
 
@@ -181,14 +164,10 @@
     .artist-header-wrapper {
       .artist-header {
         width: auto !important;
-        padding: 22px 24px 0 24px;
         display: flex;
         align-items: center;
         &-close {
-          position: absolute;
-          top: 24px;
-          right: 24px;
-          transform: translate(4px, -6px);
+          display: none;
         }
       }
     }
