--- a/src/styles/pic/author.less
+++ b/src/styles/pic/author.less
@@ -21,7 +21,7 @@
       background-size: cover;
       background-repeat: no-repeat;
       border-radius: 24px;
-      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.175);
+      box-shadow: 1px 4px 6px rgba(0, 0, 0, 0.125);
     }
     a {
       margin-left: 16px;
