fix: optimize artist detail tag styles

--- a/src/styles/artist/detail.less
+++ b/src/styles/artist/detail.less
@@ -88,6 +88,7 @@
         align-items: center;
         justify-content: center;
         margin: 18px 0 24px 0;
+        flex-flow: wrap;
         > * {
           margin-right: 6px;
           box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.025);
@@ -232,14 +233,14 @@
           border-radius: 0;
         }
         &__pic {
-          width: 92px;
-          height: 92px;
+          width: 100px;
+          height: 100px;
           & > div {
             filter: brightness(0.875);
           }
         }
         &__pic-has-head {
-          margin-top: -46px;
+          margin-top: -50px;
           margin-bottom: -8px;
         }
       }
