--- a/src/styles/pic/presentation.less
+++ b/src/styles/pic/presentation.less
@@ -155,13 +155,19 @@
         display: inline-block;
         margin-right: 8px;
         a {
+          max-width: 200px;
+          margin-bottom: 4px;
+          display: block;
+          white-space: nowrap;
+          overflow: hidden;
+          text-overflow: ellipsis;
           font-size: 12px;
           color: lighten(@color-text-primary, 5%);
           transition: 100ms ease-in-out;
           text-decoration: none;
           background: fade(@color-text-primary, 17.5%);
-          padding: 4px 6px;
-          line-height: 36px;
+          padding: 0 6px;
+          line-height: 28px;
           border-radius: 3px;
           .no-select();
         }
@@ -185,7 +191,7 @@
       }
     }
     &-stat {
-      margin-top: 12px;
+      margin-top: 4px;
       .pic-stat {
         display: inline-block;
         margin-right: 8px;
